5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1582_994.log
== SUBMITION (2019-04-13 18:56:05) 
-- CODE:
print (*Universidade Federal do Amazonas*)
-- EXECUTION TIME:
0.202742
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 1
    print (*Universidade Federal do Amazonas*)
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:56:09) 
-- CODE:
print (*Universidade Federal do Amazonas*)
-- ERROR:
File "XXXX", line 1
    print (*Universidade Federal do Amazonas*)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:57:43) 
-- CODE:
print ('Universidade Federal do Amazonas')
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 19:40:49) 
-- CODE:
print ('Universidade Federal do Amazonas')
-- EXECUTION TIME:
0.143466
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
